# voxeltronik

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  \  comp.txt  junk.txt  todo.txt
include/: blockingconcurrentqueue.h  chunk.h  chunkrenderer.h  concurrentqueue.h  config.h  fileutils.h  game.h  heightmap.h  inputhandler.h  loggersetup.h  mathplus.h  raycast.h  scene.h  scriptscene.h  scriptsystem.h  spdlog  terraingen.h  threadpool.h  tilemap.h  tileset.h  voxelinfo.h  voxelmath.h  voxelutils.h  window.h  world.h
include/graphics/: camera.h  chunkgeometry.h  chunkmesh.h  drawable.h  glstate.h  rendertarget.h  rendertask.h  shader.h  skybox.h  superchunkmesh.h  voxelmodel.h
include/scenes/: scriptscene.h
include/terrain/: binarydecorator.h  decorator.h  noise.h  noisemodule.h  open_simplex_noise.h  ygradient.h  yturbulence.h
include/util/: mobileatomic.h
res/: config.conf  extended_interface.lua  init.lua  stone.vmd  terraingen.lua  tileset.xcf
res/shaders/: skybox.frag  skybox.vert  test.frag.glsl  test.vert.glsl  voxel.vert  (+2 more)
src/: #chunk.cpp#  '  .#chunk.cpp  2  bitmap.cpp  bitmap.h  camera.cpp  camera.h  chunk.cpp  chunkrenderer.cpp  config.cpp  fileutils.cpp  game.cpp  heightmap.cpp  heightmap.h  inputhandler.cpp  inputhandler.h  loadShader.cpp  loadShader.h  loggersetup.cpp  main.cpp  mathfuncs.cpp  mathfuncs.h  mathplus.h  nanovg.c  raycast.cpp  scene.cpp  scene.h  scriptsystem.cpp  terraingen.cpp  terraingen.h  threadpool.cpp  tileset.cpp  voxelinfo.cpp  voxelinfo.h  voxelmath.cpp  voxelutils.cpp  window.cpp  world.cpp  world.h
(+32 files in other folders)
